--- a/new login.html
+++ b/new login.html
@@ -16,7 +16,7 @@
             <b>password <input type="password" placeholder="*************" name="password" class="box"></b><br><br>
             <button type="submit" name="submit" class="b" style="color: white;background-color: blue;">submit</button>&nbsp
             <button type="reset" name="reset" style="background-color: red; color:black" class="b">reset</button><br><br>
-            <a href="www">forget your password...?</a>
+            <a href="www">forget your password..?</a>
         </div>
 </body>
 </html>
