--- a/new login.html
+++ b/new login.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="this is our description page.">
+    <meta name="description" content="this is our description page..">
     <title>Login page</title>
     <link rel="stylesheet" href="new.css">
     
